# QM

./: .clang-format  .clangd  CMakeLists.txt  Dockerfile  README.md
examples/: class.pla  class_mod.pla  empty.pla  gfg.pla  gfg_4.pla  hw.pla  petrick_class.pla  t481_12.pla  t481_8.pla  test.pla  wiki.pla  wiki_pm.pla
include/IO/: blif_reader.hpp  file_reader.hpp  file_reader_factory.hpp  file_writer.hpp  io_util.hpp  logger.hpp  logic_source_file.hpp  pla_reader.hpp  pla_writer.hpp
include/QM/: QMUtil.hpp  boolean_function.hpp  literal_map.hpp  minterm_and_dc_map.hpp  minterm_map.hpp  prime_implicants.hpp  qm_process_handler.hpp  types.hpp
scripts/: build  build.sh  start_container.sh
src/: CMakeLists.txt  main.cpp
src/IO/: CMakeLists.txt  blif_reader.cpp  pla_reader.cpp
src/QM/: CMakeLists.txt  minterm_map.cpp  prime_implicants.cpp  qm_process_handler.cpp
